tests/NormalTests/paczka1/fuzzy1/36724701.err
Error in line 4: MOw1H6yT A504 17,3
Error in line 9: RlwpT A166 12,0
Error in line 11: RlwpT A476 45,9
Error in line 14: RlwpT A166 15,0
Error in line 18: A476 A476 47,7
Error in line 17: RlwpT A476 99,6
